--- a/estilos.css
+++ b/estilos.css
@@ -81,18 +81,10 @@ header{
     color: rgb(214, 138, 195);
 }
 
-.contenedor_principal{
-
-    height: 100vh;
-    width: 100%;
-
-}
-
-.palabra{
-    margin: 20px;
-    padding: 50px 0;
-    color: rgb(192, 30, 30);
-    background-color: #fff;
+.contenedor{
+    width: 95%;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 
