--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -5,6 +9,19 @@
 }
 body{
     font-family: 'Courgette', cursive;
+    text-align: center;
+}
+
+
+h3{
+    display: inline-block;
+    margin-bottom: 15px;
+    color: rgb(202, 6, 176);
+}
+
+.texto{
+    margin-bottom: 20px;
+    color: #801571;
 }
 
 a{
@@ -19,6 +36,7 @@ header{
     background-position: center;
     height: 100vh;
     width: 100%;
+    
 }
 
 .nav{
@@ -33,6 +51,7 @@ header{
 .nav.active{
     background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     padding: 8px;
+    
 }
 
 .nav.active .logo,
@@ -75,17 +94,128 @@ header{
 }
 
 .texto_header{
-    padding: 525px 25px;
+    padding: 605px 25px 0 25px;
     text-align: center;
     font-size: 25px;
     color: rgb(214, 138, 195);
 }
 
-.contenedor{
-    width: 95%;
-    max-width: 1100px;
-    margin: 0 auto;
+.album{
+    margin-top: 25px;
+}
+
+@keyframes mover{
+    0%{
+        transform: translateY(100%);
+    }
+}
+
+.contenido{
+    flex-shrink: 0;
+    border-color: #121fd6;
+
+    background-color: #F3F2F2;
+    margin-bottom: 2rem;
+    margin-top: 50px;
+
+    -webkit-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    -moz-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    border-radius: 10px;
+}
+
+.contenedor-slider{
+    width: 90%;
+    max-width: 900px;
+    margin: auto;
+    overflow: hidden;
+    position: inherit;
+}
+
+.slider{
+    display: flex;
+    width: 500%;
+    height: 450px;
+    margin-left: -100%;
+}
+
+.slider__section{
+    width: 100%;
+}
+
+.slider__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
+.slider__btn{
+    border-radius: 50%;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(238, 228, 228, 0.7);
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    color: #8a4280;
+}
 
+.slider__btn:hover{
+    background-color: rgba(175, 140, 140, 0.7);
+}
+
+.slider__btn--left{
+    left: 2px;
+}
+
+.slider__btn--right{
+    right: 2px;
+}
+
+
+.section_conteo{
+    margin-top: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.countdown{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 95%;
+}
+
+.countdown div{
+    display: grid;
+    place-items: center;
+    padding: 12px;
+}
+
+.text_numeros{
+    
+    display: grid;
+    border: solid 1px  rgba(230, 15, 201, 0.7);
+    place-items: center;
+    height: 50px;
+    width: 50px;
+    font-size: 12px;
+    font-weight: bold;
+    -webkit-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    -moz-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
+    border-radius: 50%;
+}
+
+.text_conteo{
+    margin-top: 20px;
+    text-align: center;
+}
