--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,11 @@ body{
     text-align: center;
 }
 
+.contenedor{
+    width: 95%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
 
 h3{
     display: inline-block;
@@ -125,7 +130,7 @@ header{
 }
 
 .contenedor-slider{
-    width: 90%;
+    width: 95%;
     max-width: 900px;
     margin: auto;
     overflow: hidden;
@@ -135,7 +140,7 @@ header{
 .slider{
     display: flex;
     width: 500%;
-    height: 450px;
+    height: 600px;
     margin-left: -100%;
 }
 
@@ -148,34 +153,6 @@ header{
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-
-.slider__btn{
-    border-radius: 50%;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(238, 228, 228, 0.7);
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-    color: #8a4280;
-}
-
-.slider__btn:hover{
-    background-color: rgba(175, 140, 140, 0.7);
-}
-
-.slider__btn--left{
-    left: 2px;
-}
-
-.slider__btn--right{
-    right: 2px;
 }
 
 
@@ -201,13 +178,13 @@ header{
 }
 
 .text_numeros{
-    
     display: grid;
+    color: #121fd6;
     border: solid 1px  rgba(230, 15, 201, 0.7);
     place-items: center;
     height: 50px;
     width: 50px;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
     -webkit-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
     -moz-box-shadow: 0px 3px 8px 4px rgba(159, 20, 214, 0.7);
@@ -218,4 +195,37 @@ header{
 .text_conteo{
     margin-top: 20px;
     text-align: center;
+    color: #121fd6;
+    font-weight: bold;
+    font-size: 15px;
 }
+
+
+.site-footer{
+    background-color: black;
+    padding: 1rem;
+    margin-top: 3rem;
+}
+
+.site-footer p{
+    color: white;
+    font-size: 2rem;
+    font-weight: 100;
+    font-family: 'PT Sans', sans-serif;
+    text-align: center;
+}
+
+.site-footer a{
+    text-decoration: none;
+    color: white;
+    font-family: 'PT Sans', sans-serif;
+}
+
+.site-footer p span{
+    font-weight: 700;
+}
+
+.wp{
+    margin-top: 5px;
+}
+
