--- a/estilos.css
+++ b/estilos.css
@@ -167,7 +167,12 @@ header{
     font-size: 20px;
     margin-bottom: 10px;
     color: #801571;
+    padding: 0 10px;
+}
 
+.nombre{
+    color: #ec1bd0;
+    font-weight: bold;
 }
 
 .section_conteo{
